--- a/app/src/main/res/drawable/button_unselected.xml
+++ b/app/src/main/res/drawable/button_unselected.xml
@@ -6,8 +6,10 @@
         android:width="1dp"
         android:color="?fb_border_color" />
 
+    <solid android:color="?fb_trait_button_background_tint" />
+
     <padding
-        android:bottom="5dp"
+        android:bottom="0dp"
         android:left="5dp"
         android:right="5dp"
         android:top="5dp" />
