--- a/app/src/main/res/layout/trait_disease_rating.xml
+++ b/app/src/main/res/layout/trait_disease_rating.xml
@@ -1,289 +1,212 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.fieldbook.tracker.traits.DiseaseRatingTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/diseaseLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:visibility="gone"
-    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="HardcodedText"
     tools:visibility="visible">
 
-    <ScrollView
+    <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal">
+        android:layout_gravity="center"
+        android:columnCount="6"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:paddingTop="2dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <Button
+            android:id="@+id/rust0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="0" />
 
-            <GridLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:columnCount="6"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal"
-                android:paddingTop="2dp">
+        <Button
+            android:id="@+id/rust5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="5" />
 
-                <Button
-                    android:id="@+id/rust0"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="0"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="10" />
 
-                <Button
-                    android:id="@+id/rust5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="5"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="15" />
 
-                <Button
-                    android:id="@+id/rust10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="10"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="20" />
 
-                <Button
-                    android:id="@+id/rust15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="15"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust25"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="25" />
 
-                <Button
-                    android:id="@+id/rust20"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="20"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust30"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="30" />
 
-                <Button
-                    android:id="@+id/rust25"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="25"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust35"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="35" />
 
-                <Button
-                    android:id="@+id/rust30"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="30"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust40"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="40" />
 
-                <Button
-                    android:id="@+id/rust35"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="35"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust45"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="45" />
 
-                <Button
-                    android:id="@+id/rust40"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="40"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust50"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="50" />
 
-                <Button
-                    android:id="@+id/rust45"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="45"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust55"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="55" />
 
-                <Button
-                    android:id="@+id/rust50"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="50"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust60"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="60" />
 
-                <Button
-                    android:id="@+id/rust55"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="55"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust65"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="65" />
 
-                <Button
-                    android:id="@+id/rust60"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="60"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust70"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="70" />
 
-                <Button
-                    android:id="@+id/rust65"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="65"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust75"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="75" />
 
-                <Button
-                    android:id="@+id/rust70"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="70"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust80"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="80" />
 
-                <Button
-                    android:id="@+id/rust75"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="75"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust85"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="85" />
 
-                <Button
-                    android:id="@+id/rust80"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="80"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust90"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="90" />
 
-                <Button
-                    android:id="@+id/rust85"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="85"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust95"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="95" />
 
-                <Button
-                    android:id="@+id/rust90"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="90"
-                    android:visibility="gone" />
+        <Button
+            android:id="@+id/rust100"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/button_width_disease"
+            android:text="100" />
 
-                <Button
-                    android:id="@+id/rust95"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="95"
-                    android:visibility="gone" />
+    </GridLayout>
 
-                <Button
-                    android:id="@+id/rust100"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="100"
-                    android:visibility="gone" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:paddingTop="5dp"
+        tools:ignore="ButtonStyle">
 
-            </GridLayout>
+        <Button
+            android:id="@+id/rustR"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:minWidth="@dimen/button_width_numeric"
+            android:text="R" />
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal"
-                android:paddingTop="5dp">
+        <Button
+            android:id="@+id/rustM"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:minWidth="@dimen/button_width_numeric"
+            android:text="M" />
 
-                <Button
-                    android:id="@+id/rustR"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="85dp"
-                    android:text="R" />
+        <Button
+            android:id="@+id/rustS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:minWidth="@dimen/button_width_numeric"
+            android:text="S" />
 
-                <Button
-                    android:id="@+id/rustM"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="85dp"
-                    android:text="M" />
+        <Button
+            android:id="@+id/rustDelim"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:minWidth="@dimen/button_width_numeric"
+            android:text="/" />
 
-                <Button
-                    android:id="@+id/rustS"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="85dp"
-                    android:text="S" />
+    </LinearLayout>
 
-                <Button
-                    android:id="@+id/rustDelim"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_width_disease"
-                    android:text="/" />
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
 </com.fieldbook.tracker.traits.DiseaseRatingTraitLayout>
