--- a/app/src/main/res/layout/dialog_upload_files.xml
+++ b/app/src/main/res/layout/dialog_upload_files.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="20dp"
     android:paddingTop="5dp"
     android:paddingRight="20dp"
-    android:paddingBottom="5dp">
+    android:paddingBottom="5dp"
+    android:background="@color/WHITE">
 
     <LinearLayout
         android:layout_width="match_parent"
