refine field detail page layout

--- a/app/src/main/res/menu/menu_field_details.xml
+++ b/app/src/main/res/menu/menu_field_details.xml
@@ -8,11 +8,11 @@
         app:showAsAction="always"
         android:title="@string/fields_rename_study" />
 
-<!--    <item-->
-<!--        android:id="@+id/sort"-->
-<!--        android:icon="@drawable/ic_field_sort"-->
-<!--        app:showAsAction="always"-->
-<!--        android:title="@string/fields_sort_update" />-->
+    <item
+        android:id="@+id/sort"
+        android:icon="@drawable/ic_field_sort"
+        app:showAsAction="always"
+        android:title="@string/fields_sort_update" />
 
     <item
         android:id="@+id/delete"
