--- a/app/src/main/res/layout/list_item_field_detail_recycler.xml
+++ b/app/src/main/res/layout/list_item_field_detail_recycler.xml
@@ -9,6 +9,13 @@
     android:paddingTop="12dp"
     android:paddingBottom="12dp">
 
+    <ImageView
+        android:id="@+id/traitIconImageView"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_margin="8dp"
+        android:src="@drawable/ic_trait_categorical"/>
+
     <LinearLayout xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/container_inner_item"
@@ -18,7 +25,7 @@
         android:layout_centerVertical="true">
 
         <TextView
-            style="@style/TextViewStyle.Bold"
+            style="@style/TextViewStyle.Bold.Title"
             android:id="@+id/traitNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,11 +48,5 @@
             android:textSize="@dimen/text_size_small" />
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/traitIconImageView"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_margin="6dp"/>
 
 </LinearLayout>
