--- a/app/src/main/res/layout/list_item_field_recycler.xml
+++ b/app/src/main/res/layout/list_item_field_recycler.xml
@@ -11,9 +11,9 @@
 
     <ImageView
         android:id="@+id/fieldSourceIcon"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_margin="6dp"/>
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_margin="8dp"/>
 
     <LinearLayout xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -24,7 +24,7 @@
         android:layout_centerVertical="true">
 
         <TextView
-            style="@style/TextViewStyle.Bold"
+            style="@style/TextViewStyle.Bold.Title"
             android:id="@+id/fieldName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -32,7 +32,6 @@
             android:ellipsize="end"
             android:gravity="start"
             android:singleLine="true"
-            android:textSize="@dimen/text_size_large"
             tools:text="field_sample"/>
 
         <TextView
@@ -43,8 +42,7 @@
             android:ellipsize="end"
             android:gravity="start"
             android:minWidth="40dp"
-            android:singleLine="true"
-            android:textSize="@dimen/text_size_small" />
+            android:singleLine="true"/>
 
     </LinearLayout>
 
