--- a/app/src/main/res/layout/fragment_field_detail.xml
+++ b/app/src/main/res/layout/fragment_field_detail.xml
@@ -56,7 +56,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:orientation="vertical"
-                        android:layout_marginEnd="16dp">
+                        android:layout_marginBottom="8dp">
 
                         <TextView
                             style="@style/TextViewStyle.Bold.Title"
@@ -67,10 +67,10 @@
 
                         <TextView
                             style="@style/TextViewStyle.Sub"
-                            android:id="@+id/importTextView"
+                            android:id="@+id/importDateTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Imported 2024-01-01" />
+                            android:text="2024-01-01" />
                     </LinearLayout>
 
                     <!-- Collapse/Expand Icon -->
@@ -88,6 +88,22 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:visibility="gone">
+
+                    <!-- Import Source Item -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                        android:layout_marginBottom="8dp">
+
+                        <TextView
+                            style="@style/TextViewStyle.Sub"
+                            android:id="@+id/importSourceTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Imported from sample file"/>
+                    </LinearLayout>
 
                     <!-- Entries Item -->
                     <LinearLayout
