--- a/app/src/main/res/layout/fragment_field_detail.xml
+++ b/app/src/main/res/layout/fragment_field_detail.xml
@@ -88,7 +88,7 @@
                     android:orientation="vertical"
                     android:visibility="gone">
 
-                    <!-- Import Source Item -->
+                    <!-- Field Narrative Item -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -98,37 +98,7 @@
 
                         <TextView
                             style="@style/TextViewStyle.Sub"
-                            android:id="@+id/importSourceTextView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                    <!-- Entries Item -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center_vertical"
-                        android:layout_marginBottom="8dp">
-
-                        <TextView
-                            style="@style/TextViewStyle.Sub"
-                            android:id="@+id/entryTextView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                    <!-- Sort Item -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center_vertical"
-                        android:layout_marginBottom="8dp">
-
-                        <TextView
-                            style="@style/TextViewStyle.Sub"
-                            android:id="@+id/sortTextView"
+                            android:id="@+id/fieldNarrativeTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
                     </LinearLayout>
