Remove spinner variable

--- a/app/src/main/res/layout/view_trait_box.xml
+++ b/app/src/main/res/layout/view_trait_box.xml
@@ -16,7 +16,7 @@
         android:paddingBottom="10dp"
         android:src="@drawable/trait_chevron_left"
         app:layout_constraintBottom_toTopOf="@id/traitsProgressBar"
-        app:layout_constraintTop_toTopOf="@+id/traitType"
+        app:layout_constraintTop_toTopOf="@+id/traitTypeTv"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageView
@@ -31,20 +31,9 @@
         android:paddingBottom="10dp"
         android:src="@drawable/trait_chevron_right"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/traitType"
+        app:layout_constraintTop_toTopOf="@+id/traitTypeTv"
         app:layout_constraintBottom_toTopOf="@id/traitsProgressBar" />
 
-    <Spinner
-        android:id="@+id/traitType"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@id/traitDetails"
-        app:layout_constraintEnd_toStartOf="@id/traitRight"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/traitLeft" />
 
     <TextView
         android:id="@+id/traitTypeTv"
@@ -57,10 +46,10 @@
         android:textColor="#000000"
         android:textSize="@dimen/text_size_large"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@id/traitRight"
         app:layout_constraintBottom_toTopOf="@id/traitDetails"
-        app:layout_constraintStart_toEndOf="@id/traitLeft"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@id/traitRight"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/traitLeft" />
 
     <TextView
         android:id="@+id/traitDetails"
@@ -75,7 +64,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/traitType"
+        app:layout_constraintTop_toBottomOf="@id/traitTypeTv"
         app:layout_constraintBottom_toTopOf="@id/traitsProgressBar" />
 
     <ProgressBar
