--- a/app/src/main/res/layout/fragment_field_detail.xml
+++ b/app/src/main/res/layout/fragment_field_detail.xml
@@ -119,7 +119,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp">
 
                 <!-- Collect Item -->
                 <LinearLayout
@@ -127,6 +128,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_vertical">
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:src="@drawable/ic_nav_drawer_collect_data" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -152,7 +159,8 @@
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_nav_drawer_collect_data" />
+                        android:src="@drawable/ic_chevron_right" />
+
                 </LinearLayout>
 
             </LinearLayout>
@@ -170,7 +178,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp">
 
                 <!-- Export Item -->
                 <LinearLayout
@@ -178,6 +187,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_vertical">
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_margin="8dp"
+                        android:src="@drawable/trait_date_save" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -203,7 +218,8 @@
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/trait_date_save" />
+                        android:src="@drawable/ic_chevron_right" />
+
                 </LinearLayout>
 
             </LinearLayout>
