--- a/app/src/main/res/menu/cab_menu.xml
+++ b/app/src/main/res/menu/cab_menu.xml
@@ -1,14 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/menu_select_all"
+        android:icon="@drawable/ic_tb_toggle_all"
+        android:title="@string/fields_select_all"
+        android:showAsAction="ifRoom|withText"/>
+    <item
         android:id="@+id/menu_export"
         android:icon="@drawable/ic_file_export_outline"
         android:title="@string/fields_export"
         android:showAsAction="ifRoom|withText"/>
-    <item
-        android:id="@+id/menu_archive"
-        android:icon="@drawable/ic_archive_arrow_down"
-        android:title="@string/fields_archive"
-        android:showAsAction="ifRoom|withText"/>
+<!--    <item-->
+<!--        android:id="@+id/menu_archive"-->
+<!--        android:icon="@drawable/ic_archive_arrow_down"-->
+<!--        android:title="@string/fields_archive"-->
+<!--        android:showAsAction="ifRoom|withText"/>-->
     <item
         android:id="@+id/menu_delete"
         android:icon="@drawable/ic_tb_delete"
